--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </p>
 <h2 align=center>
 <span style="color: rgb(0, 0, 0); line-height: 30px; font-weight: bold;">
-تخلصت ملايين النساء في أوروبا والولايات المتحدة من أوزانهم الزائدة بفضل Myralose. وفقاً لدراسة ، فقد 96.7٪ من اللذين جربوا Myralose ما بين 12 و 17 كيلوغراماً في ثلاثة أسابيع!
+تخلصت الكثير النساء في أوروبا والولايات المتحدة من أوزانهم الزائدة بفضل Myralose. وفقاً لدراسة ، فقد 96.7٪ من اللذين جربوا Myralose ما بين 12 و 17 كيلوغراماً في ثلاثة أسابيع!
 </span>
 </h2>
 <p>
@@ -152,7 +152,6 @@
 </p>
 <h2 align=center>
 <span style="color: rgb(0, 0, 0); line-height: 30px; font-weight: bold;">
-بالمناسبة ، تم اختبار Myralose من قبل الأكاديمية الوطنية للعلوم في عام 2012. كانت النتائج مذهلة ، لكن لم يتم الإعلان عنها على الإطلاق.
 <br/>
 أعتقد أن السبب في ذلك هو أنهم تمكنوا من إخراج شركات الأدوية والصالات الرياضية وأخصائيي التغذية والعيادات باهظة الثمن من العمل!
 <br/>
@@ -603,7 +602,7 @@ M لتناول العشاء. لا يزال لدي الكثير لأتحسنه
 <p>
 إنجازاتك رائعة حقًا ... لكن هل فهمتي بشكل
 صحيح أنني لست مضطره لاتباع أي نظام غذائي؟
-لقد أصابني المرض بمجرد التفكير في أنني سأضطر
+لقد أصابني الغثيان بمجرد التفكير في أنني سأضطر
 إلى التوقف عن تناول الكربوهيدرات أو شيء ما
 ... لا مزيد من الجوع من فضلك!
 </p>
